--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -17,9 +17,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="fjk-79-ZDt">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlS-Je-ZLI">
+                                    <rect key="frame" x="8" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="HTN-9a-lK3" eventType="touchUpInside" id="NUE-C5-1dP"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s8g-Zg-42Z">
+                                    <rect key="frame" x="191.5" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="HTN-9a-lK3" eventType="touchUpInside" id="1gU-E8-Ze1"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="s8g-Zg-42Z" firstAttribute="centerY" secondItem="fjk-79-ZDt" secondAttribute="centerY" id="8Mc-1S-X3D"/>
+                                <constraint firstItem="s8g-Zg-42Z" firstAttribute="leading" secondItem="OlS-Je-ZLI" secondAttribute="trailing" constant="8" id="B8k-JI-ako"/>
+                                <constraint firstItem="OlS-Je-ZLI" firstAttribute="centerY" secondItem="fjk-79-ZDt" secondAttribute="centerY" id="DG5-M1-yOC"/>
+                                <constraint firstAttribute="trailing" secondItem="s8g-Zg-42Z" secondAttribute="trailing" constant="8" id="FF6-t4-DiZ"/>
+                                <constraint firstItem="OlS-Je-ZLI" firstAttribute="leading" secondItem="fjk-79-ZDt" secondAttribute="leading" constant="8" id="ltP-JT-s6J"/>
+                                <constraint firstItem="s8g-Zg-42Z" firstAttribute="width" secondItem="OlS-Je-ZLI" secondAttribute="width" id="nIK-eR-Cq5"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="OVB-iW-BLy" detailTextLabel="lUN-Jj-8z6" style="IBUITableViewCellStyleValue1" id="0mN-7y-StZ">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0mN-7y-StZ" id="FzB-73-Esh">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
