--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -19,19 +19,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="fjk-79-ZDt">
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="fjk-79-ZDt">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OlS-Je-ZLI">
-                                    <rect key="frame" x="8" y="-15" width="176" height="30"/>
+                                    <rect key="frame" x="8" y="15" width="175.5" height="30"/>
                                     <state key="normal" title="Edit"/>
                                     <connections>
                                         <action selector="toggleEditingMode:" destination="HTN-9a-lK3" eventType="touchUpInside" id="NUE-C5-1dP"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s8g-Zg-42Z">
-                                    <rect key="frame" x="192" y="-15" width="175" height="30"/>
+                                    <rect key="frame" x="191.5" y="15" width="175.5" height="30"/>
                                     <state key="normal" title="Add"/>
                                     <connections>
                                         <action selector="addNewItem:" destination="HTN-9a-lK3" eventType="touchUpInside" id="1gU-E8-Ze1"/>
@@ -89,6 +89,7 @@
                                     <outlet property="nameLabel" destination="xys-UD-Ol4" id="d5X-JK-eSc"/>
                                     <outlet property="serialNumberLabel" destination="Iwl-cG-oH5" id="soT-CC-Y5Z"/>
                                     <outlet property="valueLabel" destination="xfX-q3-wRZ" id="HUn-qd-XRQ"/>
+                                    <segue destination="g4v-if-VzE" kind="show" identifier="showItem" id="sGV-Dp-S09"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -102,10 +103,10 @@
             </objects>
             <point key="canvasLocation" x="-511" y="127"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="eHb-va-7H1">
             <objects>
-                <viewController id="g4v-if-VzE" sceneMemberID="viewController">
+                <viewController id="g4v-if-VzE" customClass="DetailViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1AI-2U-LZ7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -186,10 +187,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wsW-Kb-UVd"/>
                     </view>
+                    <connections>
+                        <outlet property="dateLabel" destination="ceI-x3-2Wn" id="Rdu-Jo-E6a"/>
+                        <outlet property="nameField" destination="bMN-5x-8Ze" id="ZB9-bX-AjN"/>
+                        <outlet property="serialNumberField" destination="wC0-7C-mw8" id="hAJ-qn-Ru3"/>
+                        <outlet property="valueField" destination="so0-85-VCs" id="zEv-b5-glC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MQY-mv-qkI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="183" y="126"/>
+            <point key="canvasLocation" x="234" y="126"/>
         </scene>
     </scenes>
 </document>
