--- a/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Base.lproj/Main.storyboard
@@ -178,6 +178,12 @@
                                             <action selector="takePicture:" destination="g4v-if-VzE" id="ue7-XY-Cru"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="KYw-c3-Srr"/>
+                                    <barButtonItem systemItem="trash" id="rGl-5f-syo">
+                                        <connections>
+                                            <action selector="deletePicture:" destination="g4v-if-VzE" id="qWc-Ul-FXc"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
